# TheHavenWASM

.github/workflows/: build.yml  release.yml
Backend/thehaven/: Cargo.toml  Makefile  README.md  wasmcloud.toml
Backend/thehaven/src/: lib.rs
Backend/thehaven/src/models/: mod.rs
Backend/thehaven/src/models/dbModels/: user.rs
Backend/thehaven/src/models/dtos/: userdto.rs
Backend/thehaven/src/services/: authentication_service.rs
