[package]
name = "thehaven"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "thehaven"

[dependencies]
futures = "0.3"
form_urlencoded = "1.0"
wasmbus-rpc = "0.11"
wasmcloud-interface-httpserver = "0.8"
chrono = {version = "0.4.23", features = ["serde"] }
serde = {version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
wasmcloud-interface-sqldb = "0.8"
wasmcloud-interface-numbergen = "0.8"
rust-argon2 = "0.5"
rand = "0.7"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
